# proxima

./: .gitignore  Cargo.toml  README.md  SECURITY.md  TECHNICAL.md
.github/workflows/: ci.yml
config/: .env.example
demo/: README.md  cluster-compose.yml
demo/adsb-server/: Cargo.toml
demo/adsb-server/src/: adsb.rs  config.rs  db.rs  main.rs  routes.rs
demo/ais-server/: Cargo.toml
demo/ais-server/src/: aisstream.rs  config.rs  db.rs  main.rs  routes.rs
demo/cluster-test/: Cargo.toml
demo/cluster-test/src/: main.rs
demo/cluster-ui/: index.html  package-lock.json  package.json
demo/cluster-ui/src/: App.tsx  config.ts
demo/cluster-ui/src/components/: WeatherPanel.tsx
demo/cluster-ui/src/hooks/: useWeather.ts
demo/experiments/: Cargo.toml
demo/experiments/src/: main.rs
demo/geo-node/: Cargo.toml  Dockerfile
demo/geo-node/src/: grpc.rs  main.rs  metadata.rs  snapshot.rs
demo/grpc-bench/: Cargo.toml
demo/grpc-bench/src/: main.rs
demo/k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  secrets-template.yaml  shard-0-americas.yaml  shard-1-europe.yaml  shard-2-asia.yaml  shard-3-standby.yaml  storage.yaml
demo/loadtest/: Cargo.toml
demo/loadtest/src/: main.rs
demo/radio-server/: Cargo.toml
demo/radio-server/src/: aggregate.rs  config.rs  main.rs  radio_api.rs  routes.rs
demo/server/: Cargo.toml
demo/server/src/: config.rs  db.rs  main.rs  opensky.rs  routes.rs
demo/ui/: index.earthquake.html  index.html  index.radio.html  package-lock.json  package.json  tsconfig.json  vite.adsb.config.ts  vite.ais.config.ts  vite.config.ts  vite.radio.config.ts  vite.weather.config.ts
demo/ui/src/: App.tsx  AppEarthquake.tsx  AppRadio.tsx  AppSatellite.tsx  main.radio.tsx  types.ts
demo/ui/src/api/: client.ts
demo/ui/src/components/: AircraftMarker.tsx  AircraftPanel.tsx  MetricsPanel.tsx  NearbySearch.tsx  RadioFlyout.tsx  RadioMarker.tsx  TrieExplorer.tsx
demo/ui/src/utils/: aircraft.ts
demo/weather-server/: Cargo.toml
demo/weather-server/src/: aggregate.rs  config.rs  main.rs  metar_bulk.rs  open_meteo.rs  routes.rs
docs/: quickstart-dotnet.cs  quickstart-python.py
docs/proto/: georedis.proto
lib/: Cargo.toml
lib/benches/: latency.rs
lib/src/: cluster.rs  error.rs  lib.rs  metrics.rs  store.rs  trie.rs
lib/tests/: integration.rs
scripts/: cluster-load-test.ps1  demo-cluster.ps1  demo-cluster.sh  run-demo.ps1  run-demo.sh  run-experiments.ps1  setup.ps1  setup.sh
tests/cluster_integration/: Cargo.toml
tests/cluster_integration/src/: main.rs
