[workspace]
members  = [
    "lib",
    "demo/server",
    "demo/weather-server",
    "demo/loadtest",
    "demo/geo-node",
    "tests/cluster_integration",
]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
redis      = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
