[package]
name        = "georedis"
version     = "0.1.0"
edition     = "2021"
description = "S2-geometry-keyed trie persisted to Redis — fast near-me queries for dynamic objects"
repository  = "https://github.com/YOUR_USERNAME/georedis"
license     = "MIT"
keywords    = ["geo", "s2", "redis", "trie", "spatial"]
categories  = ["data-structures", "database"]

[dependencies]
s2         = "0.0.10"
redis      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = "1"
tracing    = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["full", "test-util"] }

[[bench]]
name    = "latency"
harness = false
