[package]
name        = "proxima"
version     = "0.1.0"
edition     = "2021"
description = "S2-geometry-keyed distributed geospatial trie with Redis persistence — sub-10ms near-me queries over millions of moving objects"
repository  = "https://github.com/dsgouda7/proxima"
license     = "MIT"
readme      = "../README.md"
keywords    = ["geo", "s2", "redis", "distributed", "spatial"]
categories  = ["data-structures", "database"]

[dependencies]
s2            = "0.0.10"
hdrhistogram  = "7"
redis         = { workspace = true, features = ["cluster-async"] }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = "1"
tracing       = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["full", "test-util"] }

[[bench]]
name    = "latency"
harness = false
