[package]
name    = "georedis-ais"
version = "0.1.0"
edition = "2021"

[dependencies]
georedis           = { path = "../../lib" }
tokio              = { version = "1", features = ["full"] }
axum               = "0.7"
tower-http         = { version = "0.5", features = ["cors"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
dotenvy            = "0.15"
s2                 = "0.0.10"
rusqlite           = { version = "0.31", features = ["bundled"] }
tokio-tungstenite  = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util       = "0.3"
