[package]
name        = "geo-redis-experiments"
version     = "0.1.0"
edition     = "2021"
description = "Controlled experiments: latency histograms, W×Δt bound, ZSET drift, memory per entity"

[[bin]]
name = "experiments"
path = "src/main.rs"

[dependencies]
proxima            = { package = "geo-redis", path = "../../lib" }
tokio            = { workspace = true }
redis            = { version = "0.26", features = ["tokio-comp"] }
serde_json       = { workspace = true }
anyhow           = "1"
tracing          = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hdrhistogram     = "7"
clap             = { version = "4", features = ["derive"] }
rand             = "0.8"
s2               = "0.0.10"
