[package]
name    = "geo-redis-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
proxima            = { package = "geo-redis", path = "../../lib" }
tokio              = { version = "1", features = ["full"] }
axum               = "0.7"
tower-http         = { version = "0.5", features = ["cors"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
dotenvy            = "0.15"
