[package]
name    = "georedis-cluster-test"
version = "0.1.0"
edition = "2021"
description = "Integration tests: high-load ingestion, shard split seeding, delta-sync consistency"

[[bin]]
name = "cluster-test"
path = "src/main.rs"

[dependencies]
georedis            = { path = "../../lib" }
tokio               = { version = "1", features = ["full"] }
serde_json          = "1"
anyhow              = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
redis               = { version = "0.26", features = ["tokio-comp"] }
testcontainers      = "0.23"
rand                = "0.8"
reqwest             = { version = "0.12", features = ["json"] }
